--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,7 +1,7 @@
 book_filename: "Procedures-and-Guidelines"
 language:
   ui:
-    chapter_name: "Chapter "
+    chapter_name: ""
 delete_merged_file: true
 clean: true
 output_dir: "docs"
